--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.5.2",
     "sockjs-client": "^1.0.3",
     "rest": "^1.3.1",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
+    "webpack": "^5.72.1"
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
