--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.rest.base-path=/api
 
 # Database Configurations
-spring.datasource.url=jdbc:mysql://${DB_URL:localhost:3306}/mydb
+spring.datasource.url=jdbc:mysql://${DB_URL:localhost:3306}/mydb?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Increase Logging
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
