--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.data.rest.base-path=/api
 
 # Database Configurations
-spring.datasource.url=jdbc:mysql://${DB_URL:localhost:3306}/mydb
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://${DB_URL:localhost:3306}/mydb
+#spring.datasource.username=${DB_USERNAME:root}
+#spring.datasource.password=${DB_PASSWORD:password}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
